[kinetic] Add open_street_map doc & source jobs

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5607,6 +5607,16 @@ repositories:
       url: https://github.com/ros-gbp/open_karto-release.git
       version: 1.1.4-0
     status: maintained
+  open_sreet_map:
+    doc:
+      type: git
+      url: https://github.com/ros-geographic-info/open_street_map.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ros-geographic-info/open_street_map.git
+      version: master
+    status: maintained
   opencv3:
     release:
       tags:
