--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1963,6 +1963,16 @@ repositories:
       url: https://github.com/ros-gbp/ompl-release.git
       version: 1.3.1-3
     status: maintained
+  open_sreet_map:
+    doc:
+      type: git
+      url: https://github.com/ros-geographic-info/open_street_map.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ros-geographic-info/open_street_map.git
+      version: master
+    status: maintained
   opencv3:
     release:
       tags:
