Use wxpython instead of python-wxtools on Arch

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3829,6 +3829,7 @@ python-wtforms:
   gentoo: [dev-python/wtforms]
   ubuntu: [python-wtforms]
 python-wxtools:
+  arch: [wxpython]
   debian: [python-wxtools]
   fedora: [wxPython]
   gentoo: [dev-python/wxpython]
