--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2645,6 +2645,10 @@ python-requests:
     yakkety_python3: [python3-requests]
     zesty: [python-requests]
     zesty_python3: [python3-requests]
+python-requests-oauthlib:
+  debian: [python-requests-oauthlib]
+  fedora: [python-requests-oauthlib]
+  ubuntu: [python-requests-oauthlib]
 python-responses-pip:
   osx:
     pip:
