add gentoo rule

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2648,6 +2648,7 @@ python-requests:
 python-requests-oauthlib:
   debian: [python-requests-oauthlib]
   fedora: [python-requests-oauthlib]
+  gentoo: [dev-python/requests-oauthlib]
   ubuntu: [python-requests-oauthlib]
 python-responses-pip:
   osx:
