add python-requests-oauthlib (#16429)
* add python-requests-oauthlib

* add gentoo rule

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2700,6 +2700,11 @@ python-requests:
     yakkety_python3: [python3-requests]
     zesty: [python-requests]
     zesty_python3: [python3-requests]
+python-requests-oauthlib:
+  debian: [python-requests-oauthlib]
+  fedora: [python-requests-oauthlib]
+  gentoo: [dev-python/requests-oauthlib]
+  ubuntu: [python-requests-oauthlib]
 python-responses-pip:
   osx:
     pip:
