gx_sound: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2770,6 +2770,16 @@ repositories:
       url: https://github.com/ros-drivers/gscam.git
       version: master
     status: unmaintained
+  gx_sound:
+    release:
+      packages:
+      - gx_sound
+      - gx_sound_msgs
+      - gx_sound_player
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/groove-x/gx_sound-release.git
+      version: 0.2.0-0
   haf_grasping:
     doc:
       type: git
