Add python-virtualenv to rosdep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3709,6 +3709,10 @@ python-vcstool:
   fedora: [python-vcstools]
   gentoo: [dev-python/vcstools]
   macports: [py27-vcstools]
+python-virtualenv:
+  debian: [python-virtualenv]
+  fedora: [python-virtualenv]
+  ubuntu: [python-virtualenv]
 python-visual:
   debian: [python-visual]
   fedora: [python-visual]
@@ -3970,6 +3974,10 @@ python3-ruamel.yaml:
 python3-setuptools:
   debian: [python3-setuptools]
   ubuntu: [python3-setuptools]
+python3-virtualenv:
+  debian: [python3-virtualenv]
+  fedora: [python3-virtualenv]
+  ubuntu: [python3-virtualenv]
 python3-yaml:
   ubuntu: [python3-yaml]
 rosbag-metadata-pip:
