Add gentoo virtualenv

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3712,6 +3712,7 @@ python-vcstool:
 python-virtualenv:
   debian: [python-virtualenv]
   fedora: [python-virtualenv]
+  gentoo: [dev-python/virtualenv]
   ubuntu: [python-virtualenv]
 python-visual:
   debian: [python-visual]
