--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2941,6 +2941,8 @@ python-selenium-pip:
   ubuntu:
     pip:
       packages: [selenium]
+python-semver:
+  ubuntu: [python-semver]
 python-serial:
   arch: [python2-pyserial]
   debian: [python-serial]
