--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2942,6 +2942,8 @@ python-selenium-pip:
     pip:
       packages: [selenium]
 python-semver:
+  debian: [python-semver]
+  fedora: [python-semver]
   ubuntu: [python-semver]
 python-serial:
   arch: [python2-pyserial]
