Add python-semver (#16446)
* Add python-semer

* Add python-semver

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2941,6 +2941,10 @@ python-selenium-pip:
   ubuntu:
     pip:
       packages: [selenium]
+python-semver:
+  debian: [python-semver]
+  fedora: [python-semver]
+  ubuntu: [python-semver]
 python-serial:
   arch: [python2-pyserial]
   debian: [python-serial]
