Add python-virtualenv to rosdep (#16445)
* Add python-virtualenv to rosdep

* Add gentoo virtualenv

* Remove python3-virtualenv for fedora

* Remove python3-virtualenv

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3713,6 +3713,11 @@ python-vcstool:
   fedora: [python-vcstools]
   gentoo: [dev-python/vcstools]
   macports: [py27-vcstools]
+python-virtualenv:
+  debian: [python-virtualenv]
+  fedora: [python-virtualenv]
+  gentoo: [dev-python/virtualenv]
+  ubuntu: [python-virtualenv]
 python-visual:
   debian: [python-visual]
   fedora: [python-visual]
