--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4022,6 +4022,11 @@ vlc:
   debian: [vlc]
   fedora: [vlc]
   ubuntu: [vlc]
+vorbis-tools:
+  arch: [vorbis-tools]
+  debian: [vorbis-tools]
+  fedora: [vorbis-tools]
+  ubuntu: [vorbis-tools]
 vrep:
   ubuntu:
     trusty:
