--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4026,6 +4026,7 @@ vorbis-tools:
   arch: [vorbis-tools]
   debian: [vorbis-tools]
   fedora: [vorbis-tools]
+  gentoo: [media-sound/vorbis-tools]
   ubuntu: [vorbis-tools]
 vrep:
   ubuntu:
