Add vorbis-tools (#16447)
* Add vorbis-tools

* add gentoo rule

https://packages.gentoo.org/packages/media-sound/vorbis-tools

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4596,6 +4596,12 @@ vlc:
   fedora: [vlc]
   gentoo: [media-video/vlc]
   ubuntu: [vlc]
+vorbis-tools:
+  arch: [vorbis-tools]
+  debian: [vorbis-tools]
+  fedora: [vorbis-tools]
+  gentoo: [media-sound/vorbis-tools]
+  ubuntu: [vorbis-tools]
 vrep:
   ubuntu:
     trusty:
