nao_interaction: 0.1.5-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4972,6 +4972,24 @@ repositories:
       url: https://github.com/ros-naoqi/nao_dcm_robot.git
       version: master
     status: maintained
+  nao_interaction:
+    release:
+      packages:
+      - nao_audio
+      - nao_interaction
+      - nao_interaction_launchers
+      - nao_interaction_msgs
+      - nao_vision
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ros-naoqi/nao_interaction-release.git
+      version: 0.1.5-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-naoqi/naoqi_interaction.git
+      version: master
+    status: maintained
   nao_meshes:
     doc:
       type: git
