--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3979,6 +3979,9 @@ python3-ruamel.yaml:
 python3-setuptools:
   debian: [python3-setuptools]
   ubuntu: [python3-setuptools]
+python3-venv:
+  debian: [python3-venv]
+  ubuntu: [python3-venv]
 python3-yaml:
   ubuntu: [python3-yaml]
 rosbag-metadata-pip:
