--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3403,6 +3403,7 @@ repositories:
       - nlopt
       - opt_camera
       - pgm_learner
+      - ros_speech_recognition
       - rospatlite
       - rosping
       - slic
@@ -3410,7 +3411,7 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/jsk_3rdparty-release.git
-      version: 2.1.4-0
+      version: 2.1.6-0
     source:
       type: git
       url: https://github.com/jsk-ros-pkg/jsk_3rdparty.git
