grid_map: 1.6.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4029,11 +4029,12 @@ repositories:
       - grid_map_pcl
       - grid_map_ros
       - grid_map_rviz_plugin
+      - grid_map_sdf
       - grid_map_visualization
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ethz-asl/grid_map-release.git
-      version: 1.5.2-0
+      version: 1.6.0-0
     source:
       test_pull_requests: true
       type: git
