--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -978,6 +978,37 @@ repositories:
       url: https://github.com/davetcoleman/graph_msgs-release.git
       version: 0.1.0-0
     status: maintained
+  grid_map:
+    doc:
+      type: git
+      url: https://github.com/ethz-asl/grid_map.git
+      version: master
+    release:
+      packages:
+      - grid_map
+      - grid_map_core
+      - grid_map_costmap_2d
+      - grid_map_cv
+      - grid_map_demos
+      - grid_map_filters
+      - grid_map_loader
+      - grid_map_msgs
+      - grid_map_octomap
+      - grid_map_pcl
+      - grid_map_ros
+      - grid_map_rviz_plugin
+      - grid_map_sdf
+      - grid_map_visualization
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ethz-asl/grid_map-release.git
+      version: 1.6.0-1
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ethz-asl/grid_map.git
+      version: master
+    status: developed
   grpc:
     doc:
       type: git
