Add python-gnupg to rosdep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1162,6 +1162,12 @@ python-gitpython-pip:
   ubuntu:
     pip:
       packages: [gitpython]
+python-gnupg:
+  arch: [python2-gnupg]
+  debian: [python-gnupg]
+  fedora: [python-gnupg]
+  gentoo: [dev-python/python-gnupg]
+  ubuntu: [python-gnupg]
 python-google-cloud-vision-pip:
   debian:
     pip:
