dynamic_transform_publisher: 1.0.1-1 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2672,6 +2672,17 @@ repositories:
       url: https://github.com/ros/dynamic_reconfigure.git
       version: master
     status: maintained
+  dynamic_transform_publisher:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/athackst/dynamic_transform_publisher-release.git
+      version: 1.0.1-1
+    source:
+      type: git
+      url: https://github.com/athackst/dynamic_transform_publisher.git
+      version: master
+    status: maintained
   dynamicvoronoi:
     doc:
       type: git
