--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1777,6 +1777,13 @@ repositories:
       url: https://github.com/ual-arm-ros-pkg/mvsim.git
       version: master
     status: maintained
+  naoqi_libqi:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-naoqi/libqi-release.git
+      version: 2.5.0-5
+    status: maintained
   nav_pcontroller:
     doc:
       type: git
