--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2762,7 +2762,12 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/groove-x/gx_sound-release.git
-      version: 0.2.0-0
+      version: 0.2.1-0
+    source:
+      type: git
+      url: https://github.com/groove-x/gx_sound.git
+      version: master
+    status: maintained
   haf_grasping:
     doc:
       type: git
