--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1531,6 +1531,26 @@ repositories:
       url: https://github.com/pyros-dev/catkin_pip.git
       version: indigo
     status: developed
+  catkin_virtualenv:
+    doc:
+      type: git
+      url: https://github.com/locusrobotics/catkin_virtualenv-release.git
+      version: devel
+    release:
+      packages:
+      - catkin_virtualenv
+      - test_catkin_virtualenv
+      - test_catkin_virtualenv_py3
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/locusrobotics/catkin_virtualenv-release.git
+      version: 0.1.3-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/locusrobotics/catkin_virtualenv-release.git
+      version: devel
+    status: developed
   certifi:
     release:
       tags:
