--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -687,6 +687,21 @@ repositories:
       url: https://github.com/introlab/find-object.git
       version: lunar-devel
     status: maintained
+  four_wheel_steering_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/four_wheel_steering_msgs.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-drivers-gbp/four_wheel_steering_msgs-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/ros-drivers/four_wheel_steering_msgs.git
+      version: master
+    status: developed
   frame_editor:
     doc:
       type: git
