--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3954,11 +3954,21 @@ repositories:
       version: kinetic-devel
     status: maintained
   vrpn:
+    doc:
+      type: git
+      url: https://github.com/vrpn/vrpn.git
+      version: master
     release:
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-drivers-gbp/vrpn-release.git
-      version: 0.7.33-0
+      version: 7.33.1-1
+    source:
+      type: git
+      url: https://github.com/vrpn/vrpn.git
+      version: master
+    status: maintained
+    status_description: status
   vrpn_client_ros:
     doc:
       type: git
