--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2975,6 +2975,10 @@ python-serial:
     wily_python3: [python3-serial]
     xenial: [python-serial]
     xenial_python3: [python3-serial]
+    yakkety: [python-serial]
+    yakkety_python3: [python3-serial]
+    zesty: [python-serial]
+    zesty_python3: [python3-serial]
 python-setuptools:
   arch: [python2-distribute]
   debian: [python-setuptools]
