add artful and bionic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2957,6 +2957,10 @@ python-serial:
   fedora: [pyserial]
   gentoo: [dev-python/pyserial]
   ubuntu:
+    artful: [python-serial]
+    artful_python3: [python3-serial]
+    bionic: [python-serial]
+    bionic_python3: [python3-serial]
     lucid: [python-serial]
     maverick: [python-serial]
     natty: [python-serial]
