--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2957,6 +2957,10 @@ python-serial:
   fedora: [pyserial]
   gentoo: [dev-python/pyserial]
   ubuntu:
+    artful: [python-serial]
+    artful_python3: [python3-serial]
+    bionic: [python-serial]
+    bionic_python3: [python3-serial]
     lucid: [python-serial]
     maverick: [python-serial]
     natty: [python-serial]
@@ -2975,6 +2979,10 @@ python-serial:
     wily_python3: [python3-serial]
     xenial: [python-serial]
     xenial_python3: [python3-serial]
+    yakkety: [python-serial]
+    yakkety_python3: [python3-serial]
+    zesty: [python-serial]
+    zesty_python3: [python3-serial]
 python-setuptools:
   arch: [python2-distribute]
   debian: [python-setuptools]
