--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2978,6 +2978,33 @@ repositories:
       url: https://github.com/davetcoleman/rosparam_shortcuts.git
       version: kinetic-devel
     status: maintained
+  rosserial:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/rosserial.git
+      version: jade-devel
+    release:
+      packages:
+      - rosserial
+      - rosserial_arduino
+      - rosserial_client
+      - rosserial_embeddedlinux
+      - rosserial_mbed
+      - rosserial_msgs
+      - rosserial_python
+      - rosserial_server
+      - rosserial_tivac
+      - rosserial_windows
+      - rosserial_xbee
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rosserial-release.git
+      version: 0.7.7-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/rosserial.git
+      version: jade-devel
+    status: maintained
   rqt:
     doc:
       type: git
