vision_msgs: 0.0.1-1 in 'lunar/distribution.yaml' [bloom]

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3902,6 +3902,17 @@ repositories:
       url: https://github.com/ros-drivers/usb_cam.git
       version: develop
     status: unmaintained
+  vision_msgs:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/Kukanani/vision_msgs-release.git
+      version: 0.0.1-1
+    source:
+      type: git
+      url: https://github.com/Kukanani/vision_msgs.git
+      version: lunar-devel
+    status: maintained
   vision_opencv:
     doc:
       type: git
