--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2783,6 +2783,17 @@ repositories:
       type: git
       url: https://github.com/HebiRobotics/HEBI-ROS.git
       version: master
+    release:
+      packages:
+      - hebiros
+      - hebiros_advanced_examples
+      - hebiros_basic_examples
+      - hebiros_description
+      - x_demo
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/HebiRobotics/hebiros-release.git
+      version: 0.0.4-1
     status: maintained
   hector_gazebo:
     doc:
