--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1619,6 +1619,17 @@ repositories:
       url: https://github.com/ros/diagnostics.git
       version: indigo-devel
     status: maintained
+  dnn_detect:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/UbiquityRobotics-release/dnn_detect-release.git
+      version: 0.0.2-0
+    source:
+      type: git
+      url: https://github.com/UbiquityRobotics/dnn_detect.git
+      version: kinetic-devel
+    status: developed
   dr_base:
     release:
       packages:
