Adding ros_yesense_imu to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -35,7 +35,7 @@ repositories:
       version: 1.3.0-1
     source:
       type: git
-      url: https://github.com/ros-industrial/abb.git
+      url: https://github.com/wangzhecoder/ros_yesense_imu.git
       version: kinetic
     status: developed
   abb_experimental:
