Adding my ros_yesense_imu package to documentation index for kinetic

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7681,7 +7681,7 @@ repositories:
     source:
       type: git
       url: https://github.com/wangzhecoder/ros_yesense_imu.git
-      version: kinetic
+      version: master
     status: maintained
   rosaria:
     doc:
