--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3578,18 +3578,7 @@ mrpt:
   debian: [libmrpt-dev]
   fedora: [mrpt-devel]
   gentoo: [sci-electronics/mrpt]
-  ubuntu:
-    oneiric: [libmrpt-dev]
-    precise: [libmrpt-dev]
-    quantal: [libmrpt-dev]
-    raring: [libmrpt-dev, mrpt-apps]
-    saucy: [libmrpt-dev, mrpt-apps]
-    trusty: [libmrpt-dev]
-    utopic: [libmrpt-dev]
-    vivid: [libmrpt-dev]
-    wily: [libmrpt-dev]
-    xenial: [libmrpt-dev]
-    yakkety: [libmrpt-dev]
+  ubuntu: [libmrpt-dev]
 msgpack:
   arch: [msgpack-c]
   debian: [libmsgpack-dev]
