Add denso_robot_ros to documentation index for distro

--- a/hydro/distribution.yaml
+++ b/hydro/distribution.yaml
@@ -1371,6 +1371,33 @@ repositories:
       url: https://github.com/start-jsk/denso.git
       version: hydro-devel
     status: developed
+  denso_robot_ros:
+    doc:
+      type: git
+      url: https://github.com/DENSORobot/denso_robot_ros.git
+      version: hydro-devel
+    release:
+      packages:
+      - bcap_core
+      - bcap_service
+      - bcap_service_test
+      - denso_robot_bringup
+      - denso_robot_control
+      - denso_robot_core
+      - denso_robot_core_test
+      - denso_robot_descriptions
+      - denso_robot_gazebo
+      - denso_robot_moveit_config
+      - denso_robot_ros
+      tags:
+        release: release/hydro/{package}/{version}
+      url: https://github.com/DENSORobot/denso_robot_ros-release.git
+      version: 3.0.1-0
+    source:
+      type: git
+      url: https://github.com/DENSORobot/denso_robot_ros.git
+      version: hydro-devel
+    status: developed
   depthcloud_encoder:
     doc:
       type: git
