--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2468,6 +2468,33 @@ repositories:
       url: https://github.com/start-jsk/denso.git
       version: indigo-devel
     status: developed
+  denso_robot_ros:
+    doc:
+      type: git
+      url: https://github.com/DENSORobot/denso_robot_ros.git
+      version: indigo-devel
+    release:
+      packages:
+      - bcap_core
+      - bcap_service
+      - bcap_service_test
+      - denso_robot_bringup
+      - denso_robot_control
+      - denso_robot_core
+      - denso_robot_core_test
+      - denso_robot_descriptions
+      - denso_robot_gazebo
+      - denso_robot_moveit_config
+      - denso_robot_ros
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/DENSORobot/denso_robot_ros-release.git
+      version: 3.0.1-0
+    source:
+      type: git
+      url: https://github.com/DENSORobot/denso_robot_ros.git
+      version: indigo-devel
+    status: developed
   depth_nav_tools:
     doc:
       type: git
