--- a/index.yaml
+++ b/index.yaml
@@ -6,8 +6,11 @@ distributions:
 #  r2b2:
 #    distribution: [r2b2/distribution.yaml]
 #    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b2-cache.yaml.gz
-  r2b3:
-    distribution: [r2b3/distribution.yaml]
-    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b3-cache.yaml.gz
+#  r2b3:
+#    distribution: [r2b3/distribution.yaml]
+#    distribution_cache: http://repo.ros2.org/rosdistro_cache/r2b3-cache.yaml.gz
+  ardent:
+    distribution: [ardent/distribution.yaml]
+    distribution_cache: http://repo.ros2.org/rosdistro_cache/ardent-cache.yaml.gz
 type: index
 version: 3
