Add pytest for ament_cmake_python.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3213,6 +3213,8 @@ python3-nose:
     xenial: [python3-nose]
 python3-numpy:
   ubuntu: [python3-numpy]
+python3-pytest:
+  ubuntu: [python3-pytest]
 python3-setuptools:
   ubuntu:
     xenial: [python3-setuptools]
