Add pyparsing to rosdep.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3208,6 +3208,9 @@ python3-flake8:
 python3-pep8:
   ubuntu:
     xenial: [python3-pep8]
+python3-pyparsing:
+  ubuntu:
+    xenial: [python3-pyparsing]
 python3-nose:
   ubuntu:
     xenial: [python3-nose]
