--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2039,7 +2039,7 @@ repositories:
       url: https://github.com/ros-gbp/ompl-release.git
       version: 1.3.1-3
     status: maintained
-  open_sreet_map:
+  open_street_map:
     doc:
       type: git
       url: https://github.com/ros-geographic-info/open_street_map.git
