Enable pull request testing for nmea_msgs

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5385,6 +5385,7 @@ repositories:
       url: https://github.com/ros-drivers-gbp/nmea_msgs-release.git
       version: 1.0.0-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-drivers/nmea_msgs.git
       version: jade-devel
