--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8034,6 +8034,7 @@ repositories:
       url: https://github.com/ros-drivers-gbp/nmea_msgs-release.git
       version: 0.1.1-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-drivers/nmea_msgs.git
       version: indigo-devel
