--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -675,7 +675,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/filters.git
-      version: hydro-devel
+      version: lunar-devel
     release:
       tags:
         release: release/lunar/{package}/{version}
@@ -685,7 +685,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/filters.git
-      version: hydro-devel
+      version: lunar-devel
     status: maintained
   find_object_2d:
     doc:
