--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5708,7 +5708,7 @@ repositories:
       url: https://github.com/ros-gbp/open_karto-release.git
       version: 1.1.4-0
     status: maintained
-  open_sreet_map:
+  open_street_map:
     doc:
       type: git
       url: https://github.com/ros-geographic-info/open_street_map.git
