--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -947,6 +947,10 @@ gperftools:
   fedora: [gperftools, gperftools-devel]
   gentoo: [dev-util/gperf]
   ubuntu: [google-perftools, libgoogle-perftools-dev]
+gpiozero:
+  ubuntu:
+    pip:
+      packages: [gpiozero]
 gpsd:
   debian: [gpsd]
   fedora: [gpsd]
