base: add RPi.GPIO as pip dependency
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4035,6 +4035,10 @@ rosemacs-el:
     lucid: [rosemacs-el]
     oneiric: [rosemacs-el]
     precise: [rosemacs-el]
+rpi.gpio:
+  ubuntu:
+    pip:
+      packages: [RPi.GPIO]
 rsync:
   arch: [rsync]
   debian: [rsync]
