Move into python.yaml
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4006,6 +4006,13 @@ rosbag-metadata-pip:
   ubuntu:
     pip:
       packages: [rosbag-metadata]
+rpi.gpio-pip:
+  debian:
+    pip:
+      packages: [RPi.GPIO]
+  ubuntu:
+    pip:
+      packages: [RPi.GPIO]
 rpy2:
   arch: [python-rpy2]
   debian: [python-rpy2]
