--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -44,6 +44,13 @@ epydoc:
     pip:
       packages: [epydoc]
   ubuntu: [python-epydoc]
+gpiozero-pip:
+  debian:
+    pip:
+      packages: [gpiozero]
+  ubuntu:
+    pip:
+      packages: [gpiozero]
 gunicorn:
   debian: [gunicorn]
   fedora: [python-gunicorn]
