buster and zesty have packages
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -44,13 +44,33 @@ epydoc:
     pip:
       packages: [epydoc]
   ubuntu: [python-epydoc]
-gpiozero-pip:
+gpiozero:
   debian:
-    pip:
-      packages: [gpiozero]
+    buster: [python-gpiozero]
+    jessie:
+      pip:
+        packages: [gpiozero]
+    stretch:
+      pip:
+        packages: [gpiozero]
   ubuntu:
-    pip:
-      packages: [gpiozero]
+    artful: [python-gpiozero]
+    zesty: [python-gpiozero]
+    xenial:
+      pip:
+        packages: [gpiozero]
+    wily:
+      pip:
+        packages: [gpiozero]
+    vivid:
+      pip:
+        packages: [gpiozero]
+    utopic:
+      pip:
+        packages: [gpiozero]
+    trusty:
+      pip:
+        packages: [gpiozero]
 gunicorn:
   debian: [gunicorn]
   fedora: [python-gunicorn]
