buster, zesty, and fedora 26 have packages
Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4006,13 +4006,38 @@ rosbag-metadata-pip:
   ubuntu:
     pip:
       packages: [rosbag-metadata]
-rpi.gpio-pip:
+rpi.gpio:
   debian:
-    pip:
-      packages: [RPi.GPIO]
+    buster: [python-rpi.gpio]
+    jessie:
+      pip:
+        packages: [RPi.GPIO]
+    stretch:
+      pip:
+        packages: [RPi.GPIO]
   ubuntu:
-    pip:
-      packages: [RPi.GPIO]
+    artful: [python-rpi.gpio]
+    zesty: [python-rpi.gpio]
+    xenial:
+      pip:
+        packages: [RPi.GPIO]
+    wily:
+      pip:
+        packages: [RPi.GPIO]
+    vivid:
+      pip:
+        packages: [RPi.GPIO]
+    utopic:
+      pip:
+        packages: [RPi.GPIO]
+    trusty:
+      pip:
+        packages: [RPi.GPIO]
+  fedora:
+    '26': [python-rpi-gpio]
+    '25':
+      pip:
+        packages: [RPi.GPIO]
 rpy2:
   arch: [python-rpy2]
   debian: [python-rpy2]
