--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4015,29 +4015,32 @@ rpi.gpio:
     stretch:
       pip:
         packages: [RPi.GPIO]
+  fedora:
+    '25':
+      pip:
+        packages: [RPi.GPIO]
+    '26': [python-rpi-gpio]
   ubuntu:
     artful: [python-rpi.gpio]
-    zesty: [python-rpi.gpio]
-    xenial:
-      pip:
-        packages: [RPi.GPIO]
-    wily:
-      pip:
-        packages: [RPi.GPIO]
-    vivid:
+    trusty:
       pip:
         packages: [RPi.GPIO]
     utopic:
       pip:
         packages: [RPi.GPIO]
-    trusty:
+    vivid:
       pip:
         packages: [RPi.GPIO]
-  fedora:
-    '26': [python-rpi-gpio]
-    '25':
+    wily:
       pip:
         packages: [RPi.GPIO]
+    xenial:
+      pip:
+        packages: [RPi.GPIO]
+    yakkety:
+      pip:
+        packages: [RPi.GPIO]
+    zesty: [python-rpi.gpio]
 rpy2:
   arch: [python-rpy2]
   debian: [python-rpy2]
