--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -55,22 +55,25 @@ gpiozero:
         packages: [gpiozero]
   ubuntu:
     artful: [python-gpiozero]
-    zesty: [python-gpiozero]
-    xenial:
-      pip:
-        packages: [gpiozero]
-    wily:
-      pip:
-        packages: [gpiozero]
-    vivid:
+    trusty:
       pip:
         packages: [gpiozero]
     utopic:
       pip:
         packages: [gpiozero]
-    trusty:
+    vivid:
       pip:
         packages: [gpiozero]
+    wily:
+      pip:
+        packages: [gpiozero]
+    xenial:
+      pip:
+        packages: [gpiozero]
+    yakkety:
+      pip:
+        packages: [gpiozero]
+    zesty: [python-gpiozero]
 gunicorn:
   debian: [gunicorn]
   fedora: [python-gunicorn]
