make it python-gpiozero
Also add bionic

Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -44,7 +44,7 @@ epydoc:
     pip:
       packages: [epydoc]
   ubuntu: [python-epydoc]
-gpiozero:
+python-gpiozero:
   debian:
     buster: [python-gpiozero]
     jessie:
@@ -55,6 +55,7 @@ gpiozero:
         packages: [gpiozero]
   ubuntu:
     artful: [python-gpiozero]
+    bionic: [python-gpiozero]
     trusty:
       pip:
         packages: [gpiozero]
