rename to python-rpi.gpio
Also add bionic

Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4006,7 +4006,7 @@ rosbag-metadata-pip:
   ubuntu:
     pip:
       packages: [rosbag-metadata]
-rpi.gpio:
+python-rpi.gpio:
   debian:
     buster: [python-rpi.gpio]
     jessie:
@@ -4022,6 +4022,7 @@ rpi.gpio:
     '26': [python-rpi-gpio]
   ubuntu:
     artful: [python-rpi.gpio]
+    bionic: [python-rpi.gpio]
     trusty:
       pip:
         packages: [RPi.GPIO]
