--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2868,6 +2868,42 @@ python-rospkg:
     yakkety_python3: [python3-rospkg]
     zesty: [python-rospkg]
     zesty_python3: [python3-rospkg]
+python-rpi.gpio:
+  debian:
+    buster: [python-rpi.gpio]
+    jessie:
+      pip:
+        packages: [RPi.GPIO]
+    stretch:
+      pip:
+        packages: [RPi.GPIO]
+  fedora:
+    '25':
+      pip:
+        packages: [RPi.GPIO]
+    '26': [python-rpi-gpio]
+  ubuntu:
+    artful: [python-rpi.gpio]
+    bionic: [python-rpi.gpio]
+    trusty:
+      pip:
+        packages: [RPi.GPIO]
+    utopic:
+      pip:
+        packages: [RPi.GPIO]
+    vivid:
+      pip:
+        packages: [RPi.GPIO]
+    wily:
+      pip:
+        packages: [RPi.GPIO]
+    xenial:
+      pip:
+        packages: [RPi.GPIO]
+    yakkety:
+      pip:
+        packages: [RPi.GPIO]
+    zesty: [python-rpi.gpio]
 python-rrdtool:
   debian: [python-rrdtool]
   fedora: [rrdtool-python]
