--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1190,6 +1190,37 @@ python-googleapi:
     wily_python3: [python3-googleapi]
     xenial: [python-googleapi]
     xenial_python3: [python3-googleapi]
+python-gpiozero:
+  debian:
+    buster: [python-gpiozero]
+    jessie:
+      pip:
+        packages: [gpiozero]
+    stretch:
+      pip:
+        packages: [gpiozero]
+  ubuntu:
+    artful: [python-gpiozero]
+    bionic: [python-gpiozero]
+    trusty:
+      pip:
+        packages: [gpiozero]
+    utopic:
+      pip:
+        packages: [gpiozero]
+    vivid:
+      pip:
+        packages: [gpiozero]
+    wily:
+      pip:
+        packages: [gpiozero]
+    xenial:
+      pip:
+        packages: [gpiozero]
+    yakkety:
+      pip:
+        packages: [gpiozero]
+    zesty: [python-gpiozero]
 python-graphviz-pip:
   debian:
     pip:
