--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9521,6 +9521,7 @@ repositories:
       url: https://github.com/Intermodalics/tango_ros-release.git
       version: 2.0.0-0
     source:
+      test_commits: false
       type: git
       url: https://github.com/Intermodalics/tango_ros.git
       version: master
