Adding ROSRemote to documentation index for distro

--- a/hydro/distribution.yaml
+++ b/hydro/distribution.yaml
@@ -7481,6 +7481,11 @@ repositories:
         release: release/hydro/{package}/{version}
       url: https://github.com/baalexander/rospy_message_converter-release.git
       version: 0.2.0-2
+  rosremote:
+    source:
+      type: git
+      url: https://github.com/alysonmp/ROSRemote.git
+      version: master
   rosruby:
     doc:
       type: git
