Add new package, rdl, to the distribution list

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6834,6 +6834,26 @@ repositories:
       url: https://github.com/timn/ros-rcll_ros_msgs.git
       version: master
     status: developed
+  rdl:
+    doc:
+      type: git
+      url: https://gitlab.com/jlack/rdl.git
+      version: master
+    release:
+      packages:
+      - rdl
+      - rdl_benchmark
+      - rdl_cmake
+      - rdl_dynamics
+      - rdl_urdfreader
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://gitlab.com/jlack/rdl_release.git
+      version: 0.9.1-1
+    source:
+      type: git
+      url: https://gitlab.com/jlack/rdl.git
+      version: master    
   realsense_camera:
     doc:
       type: git
