--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2558,7 +2558,7 @@ python-qt-bindings:
   debian:
     buster: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
     jessie: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
-    squeeze: [python-qt4, python-qt4-dev, pyhton-sip-dev]
+    squeeze: [python-qt4, python-qt4-dev, python-sip-dev]
     stretch: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
     wheezy: [python-pyside, libpyside-dev, libshiboken-dev, shiboken, python-qt4, python-qt4-dev, python-sip-dev]
   fedora: [PyQt4, PyQt4-devel, sip-devel]
