Add "doc" for jog_arm (kinetic).

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3411,6 +3411,10 @@ repositories:
       version: 0.1.0-0
     status: developed
   jog_arm:
+    doc:
+      type: git
+      url: https://github.com/UTNuclearRoboticsPublic/jog_arm.git
+      version: kinetic
     release:
       tags:
         release: release/kinetic/{package}/{version}
