Add cppcheck key for gentoo and fedora

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -464,6 +464,8 @@ cppad:
   ubuntu: [cppad]
 cppcheck:
   debian: [cppcheck]
+  fedora: [cppcheck]
+  gentoo: [dev-util/cppcheck]
   ubuntu: [cppcheck]
 cppunit:
   arch: [cppunit]
