Category missing for gentoo

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1692,7 +1692,7 @@ libgeotiff-dev:
   arch:   [libgeotiff]
   debian: [libgeotiff-dev]
   fedora: [libgeotiff]
-  gentoo: [libgeotiff]
+  gentoo: [sci-libs/libgeotiff]
   ubuntu: [libgeotiff-dev]
 libgflags-dev:
   arch: [gflags]
