Add cppcheck key for gentoo and fedora (#16583)
* Add cppcheck key for gentoo and fedora

* + arch

https://www.archlinux.org/packages/community/x86_64/cppcheck/

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -463,7 +463,10 @@ cppad:
   gentoo: [sci-libs/coinor-cppad]
   ubuntu: [cppad]
 cppcheck:
+  arch: [cppcheck]
   debian: [cppcheck]
+  fedora: [cppcheck]
+  gentoo: [dev-util/cppcheck]
   ubuntu: [cppcheck]
 cppunit:
   arch: [cppunit]
