zbar_ros: 0.1.0-0 in 'kinetic/distribution.yaml' [bloom] (#16594)
* zbar_ros: 0.1.0-0 in 'kinetic/distribution.yaml' [bloom]

* Update source branch

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -11151,16 +11151,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ros-drivers-gbp/zbar_ros-release.git
-      version: 0.0.5-0
+      version: 0.1.0-0
     source:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     status: maintained
   zeroconf_avahi_suite:
     doc:
