--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -260,6 +260,7 @@ python-argparse:
     stretch: [libpython2.7-stdlib]
     wheezy: [python-argparse]
   fedora: [python]
+  freebsd: [py27-argparse]
   gentoo: [dev-lang/python]
   macports: [py27-argparse]
   opensuse: [python-argparse]
@@ -449,6 +450,7 @@ python-cairo:
   arch: [python2-cairo]
   debian: [python-cairo]
   fedora: [pycairo]
+  freebsd: [py27-cairo]
   gentoo: [dev-python/pycairo]
   opensuse: [python-cairo]
   slackware:
@@ -462,6 +464,9 @@ python-catkin-pkg:
   arch: [python2-catkin_pkg]
   debian: [python-catkin-pkg]
   fedora: [python-catkin_pkg]
+  freebsd:
+    pip:
+      packages: [catkin-pkg]
   gentoo: [dev-python/catkin_pkg]
   macports: [python-catkin-pkg]
   opensuse: [python-catkin_pkg]
@@ -651,6 +656,7 @@ python-coverage:
   arch: [python2-coverage]
   debian: [python-coverage]
   fedora: [python-coverage]
+  freebsd: [py27-coverage]
   gentoo: [dev-python/coverage]
   opensuse: [python-coverage]
   osx:
@@ -809,6 +815,7 @@ python-defusedxml:
   arch: [python2-defusedxml]
   debian: [python-defusedxml]
   fedora: [python-defusedxml]
+  freebsd: [py27-defusedxml]
   gentoo: [dev-python/defusedxml]
   opensuse: [python-defusedxml]
   osx:
@@ -871,6 +878,7 @@ python-empy:
   arch: [python2-empy]
   debian: [python-empy]
   fedora: [python-empy]
+  freebsd: [py27-empy]
   gentoo: [dev-python/empy]
   macports: [py27-empy]
   opensuse: [python-empy]
@@ -1348,8 +1356,8 @@ python-imaging:
     beefy: [python-imaging]
     heisenbug: [python-pillow, python-pillow-qt]
     schrödinger’s: [python-pillow, python-pillow-qt]
-    spherical: [python-imaging]
-  freebsd: [py27-imaging]
+    spherical: [python-imagin]
+  freebsd: [py27-pillow]
   gentoo: [dev-python/pillow]
   macports: [py27-pil]
   opensuse: [python-imaging]
@@ -1636,6 +1644,7 @@ python-mock:
   arch: [python2-mock]
   debian: [python-mock]
   fedora: [python-mock]
+  freebsd: [py27-mock]
   gentoo: [dev-python/mock]
   opensuse: [python-mock]
   osx:
@@ -1730,6 +1739,7 @@ python-netifaces:
   arch: [python2-netifaces]
   debian: [python-netifaces]
   fedora: [python-netifaces]
+  freebsd: [py27-netifaces]
   gentoo: [dev-python/netifaces]
   macports: [p27-netifaces]
   opensuse: [python-netifaces]
@@ -1792,6 +1802,7 @@ python-nose:
   arch: [python2-nose]
   debian: [python-nose]
   fedora: [python-nose]
+  freebsd: [py27-nose]
   gentoo: [dev-python/nose]
   macports: [py27-nose]
   opensuse: [python-nose]
@@ -1822,7 +1833,7 @@ python-numpy:
   arch: [python2-numpy]
   debian: [python-numpy]
   fedora: [numpy]
-  freebsd: [py-numpy]
+  freebsd: [py27-numpy]
   gentoo: [dev-python/numpy]
   macports: [py27-numpy]
   opensuse: [python-numpy]
@@ -1920,6 +1931,7 @@ python-opengl:
   arch: [python2-opengl]
   debian: [python-opengl]
   fedora: [PyOpenGL]
+  freebsd: [py27-PyOpenGL]
   gentoo: [dev-python/pyopengl]
   macports: [py27-opengl]
   opensuse: [python-opengl]
@@ -2168,6 +2180,7 @@ python-psutil:
   arch: [python2-psutil]
   debian: [python-psutil]
   fedora: [python-psutil]
+  freebsd: [py27-psutil]
   gentoo: [dev-python/psutil]
   macports: [py27-psutil]
   opensuse: [python-psutil]
@@ -2244,6 +2257,7 @@ python-pydot:
   arch: [python2-pydot]
   debian: [python-pydot]
   fedora: [pydot]
+  freebsd: [py27-pydot]
   gentoo: [dev-python/pydot]
   macports: [py27-pydot]
   opensuse: [python-pydot]
@@ -2307,6 +2321,7 @@ python-pygraphviz:
   arch: [python2-pygraphviz]
   debian: [python-pygraphviz]
   fedora: [graphviz-python]
+  freebsd: [py27-pygraphviz]
   gentoo: [dev-python/pygraphviz]
   opensuse: [python-pygraphviz]
   osx:
@@ -2636,6 +2651,7 @@ python-qt5-bindings:
     jessie: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
     stretch: [pyqt5-dev, python-pyqt5, python-pyqt5.qtsvg, python-sip-dev, qtbase5-dev]
   fedora: [python-qt5, sip]
+  freebsd: [py27-qt5]
   gentoo: [dev-python/PyQt5]
   opensuse: [python-qt5]
   slackware: [PyQt5]
@@ -2652,6 +2668,7 @@ python-qt5-bindings-gl:
     jessie: [python-pyqt5.qtopengl]
     stretch: [python-pyqt5.qtopengl]
   fedora: [python-qt5]
+  freebsd: [py27-qt5-opengl]
   gentoo: ['dev-python/PyQt5[opengl]']
   opensuse: [python-qt5]
   slackware: [PyQt5]
@@ -2667,6 +2684,7 @@ python-qt5-bindings-webkit:
     jessie: [python-pyqt5.qtwebkit]
     stretch: [python-pyqt5.qtwebkit]
   fedora: [python-qt5]
+  freebsd: [py27-qt5-webkit]
   gentoo: ['dev-python/PyQt5[webkit]']
   ubuntu:
     wily: [python-pyqt5.qtwebkit]
@@ -2761,6 +2779,9 @@ python-rosdep:
   arch: [python2-rosdep]
   debian: [python-rosdep]
   fedora: [python-rosdep]
+  freebsd:
+    pip:
+      packages: [rosdep]
   gentoo: [dev-python/rosdep]
   opensuse: [python-rosdep]
   osx:
@@ -2867,6 +2888,9 @@ python-rospkg:
   arch: [python2-rospkg]
   debian: [python-rospkg]
   fedora: [python-rospkg]
+  freebsd:
+    pip:
+      packages: [rospkg]
   gentoo: [dev-python/rospkg]
   macports: [py27-rospkg]
   opensuse: [python-rospkg]
@@ -3922,6 +3946,7 @@ python-wxtools:
   arch: [wxpython]
   debian: [python-wxtools]
   fedora: [wxPython]
+  freebsd: [py27-wxPython30]
   gentoo: [dev-python/wxpython]
   ubuntu: [python-wxtools]
 python-xdot:
