Updated version from master to legacy

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4070,7 +4070,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/IntelRealSense/librealsense.git
-      version: master
+      version: legacy
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -4079,7 +4079,7 @@ repositories:
     source:
       type: git
       url: https://github.com/IntelRealSense/librealsense.git
-      version: master
+      version: legacy
     status: maintained
   libsegwayrmp:
     doc:
