Restore jessie gazebo rules. Follow on to #16634

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -777,6 +777,7 @@ gazebo:
   arch: [gazebo]
   debian:
     buster: [gazebo7]
+    jessie: [gazebo7]
     stretch: [gazebo7]
   fedora: [gazebo-devel]
   gentoo: [sci-electronics/gazebo]
@@ -800,6 +801,7 @@ gazebo7:
   arch: [gazebo]
   debian:
     buster: [gazebo7]
+    jessie: [gazebo7]
     stretch: [gazebo7]
   fedora: [gazebo]
   gentoo: ['=sci-electronics/gazebo-7*']
