loki_base_node: 0.2.1-0 in 'kinetic/distribution.yaml' [bloom] (#16671)
* loki_base_node: 0.2.0-0 in 'kinetic/distribution.yaml' [bloom]

* remove bus_server

* bump loki_base_node version

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -686,12 +686,6 @@ repositories:
       url: https://github.com/voxel-dot-at/bta_tof_driver.git
       version: master
     status: maintained
-  bus_server:
-    release:
-      tags:
-        release: release/kinetic/{package}/{version}
-      url: https://github.com/UbiquityRobotics-release/bus_server-release.git
-      version: 0.1.1-0
   calibration:
     doc:
       type: git
@@ -4238,6 +4232,12 @@ repositories:
       url: https://github.com/easymov/log_server-release.git
       version: 0.1.4-1
     status: developed
+  loki_base_node:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/UbiquityRobotics-release/loki_base_node-release.git
+      version: 0.2.1-0
   loki_robot:
     release:
       packages:
