Adding armadillo2 to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -195,6 +195,16 @@ repositories:
       url: https://github.com/AutonomyLab/ardrone_autonomy.git
       version: indigo-devel
     status: developed
+  armadillo2:
+    doc:
+      type: git
+      url: https://github.com/robotican/armadillo2.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/robotican/armadillo2.git
+      version: master
+    status: maintained
   asr_approx_mvbb:
     doc:
       type: git
