--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2428,6 +2428,10 @@ python-pynmea2:
   ubuntu:
     pip:
       packages: [pynmea2]
+python-pypozyx:
+  ubuntu:
+    pip:
+      packages: [pypozyx]
 python-pyproj:
   arch: [python2-pyproj]
   debian: [python-pyproj]
