--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3014,6 +3014,7 @@ liburdfdom-dev:
   arch: [urdfdom]
   debian: [liburdfdom-dev]
   fedora: [urdfdom-devel]
+  freebsd: [ros-urdfdom]
   gentoo: [dev-libs/urdfdom]
   opensuse: [urdfdom-devel]
   slackware: [urdfdom]
@@ -3022,6 +3023,7 @@ liburdfdom-headers-dev:
   arch: [urdfdom-headers]
   debian: [liburdfdom-headers-dev]
   fedora: [urdfdom-headers-devel]
+  freebsd: [ros-urdfdom_headers]
   gentoo: [dev-libs/urdfdom_headers]
   opensuse: [urdfdom-headers-devel]
   slackware: [urdfdom_headers]
@@ -3030,6 +3032,7 @@ liburdfdom-tools:
   arch: [urdfdom]
   debian: [liburdfdom-tools]
   fedora: [urdfdom]
+  freebsd: [ros-urdfdom]
   gentoo: [dev-libs/urdfdom]
   slackware: [urdfdom]
   ubuntu: [liburdfdom-tools]
