--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2428,7 +2428,7 @@ python-pynmea2:
   ubuntu:
     pip:
       packages: [pynmea2]
-python-pypozyx:
+python-pypozyx-pip:
   ubuntu:
     pip:
       packages: [pypozyx]
