Adding rosproxy to documentation index for distro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -12519,6 +12519,25 @@ repositories:
       url: https://github.com/osrf/rosprofiler.git
       version: master
     status: maintained
+  rosproxy:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosproxy.git
+      version: master
+    release:
+      packages:
+      - rosproxy_arduino
+      - rosproxy_msgs
+      - rosproxy_server
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ecostech/rosproxy.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/ecostech/rosproxy.git
+      version: master
+    status: maintained
   rospy_message_converter:
     doc:
       type: git
