Adding rosproxy to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8176,6 +8176,25 @@ repositories:
       url: https://github.com/rospilot/rospilot.git
       version: kinetic
     status: developed
+  rosproxy:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosproxy.git
+      version: master
+    release:
+      packages:
+      - rosproxy_arduino
+      - rosproxy_msgs
+      - rosproxy_server
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ecostech/rosproxy.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/ecostech/rosproxy.git
+      version: master
+    status: maintained
   rospy_message_converter:
     release:
       tags:
