Adding rosabridge to documentation index for distro

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 # ROS distribution file
-# see REP 141: http://ros.org/reps/rep-0141.html
+# see REP 143: http://ros.org/reps/rep-0143.html
 ---
 release_platforms:
   fedora:
@@ -11145,7 +11145,6 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ecostech/roboteq_diff_driver.git
-      version: 0.1.0-0
     source:
       type: git
       url: https://github.com/ecostech/roboteq_diff_driver.git
@@ -12064,6 +12063,24 @@ repositories:
       version: develop
     status: end-of-life
     status_description: Replaced by the web_video_server package.
+  rosabridge:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    release:
+      packages:
+      - rosabridge_arduino
+      - rosabridge_msgs
+      - rosabridge_server
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ecostech/rosabridge.git
+    source:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    status: maintained
   rosaria:
     doc:
       type: git
@@ -12517,25 +12534,6 @@ repositories:
     source:
       type: git
       url: https://github.com/osrf/rosprofiler.git
-      version: master
-    status: maintained
-  rosproxy:
-    doc:
-      type: git
-      url: https://github.com/ecostech/rosproxy.git
-      version: master
-    release:
-      packages:
-      - rosproxy_arduino
-      - rosproxy_msgs
-      - rosproxy_server
-      tags:
-        release: release/indigo/{package}/{version}
-      url: https://github.com/ecostech/rosproxy.git
-      version: 0.1.1-0
-    source:
-      type: git
-      url: https://github.com/ecostech/rosproxy.git
       version: master
     status: maintained
   rospy_message_converter:
