add chromium for fedora

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -366,6 +366,7 @@ checkinstall:
   ubuntu: [checkinstall]
 chromium-browser:
   debian: [chromium]
+  fedora: [chromium]
   gentoo: [www-client/chromium]
   ubuntu: [chromium-browser]
 clang-format:
