Update python.yaml (#16678)
* Update python.yaml

Added pypozyx pip candidate

* Update python.yaml

Added -pip suffix to key

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2443,6 +2443,10 @@ python-pynmea2:
   ubuntu:
     pip:
       packages: [pynmea2]
+python-pypozyx-pip:
+  ubuntu:
+    pip:
+      packages: [pypozyx]
 python-pyproj:
   arch: [python2-pyproj]
   debian: [python-pyproj]
