tuw_multi_robot branch name fixed

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10290,7 +10290,7 @@ repositories:
     source:
       type: git
       url: https://github.com/tuw-robotics/tuw_multi_robot.git
-      version: kinetic
+      version: master
     status: maintained
   tuw_rviz:
     doc:
