Adding tuw_multi_robot to documentation index for distro (#16758)
* Adding tuw_multi_robot to documentation index for distro

* tuw_multi_robot branch name fixed

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10282,6 +10282,16 @@ repositories:
       url: https://github.com/tuw-robotics/tuw_msgs.git
       version: master
     status: developed
+  tuw_multi_robot:
+    doc:
+      type: git
+      url: https://github.com/tuw-robotics/tuw_multi_robot.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/tuw-robotics/tuw_multi_robot.git
+      version: master
+    status: maintained
   tuw_rviz:
     doc:
       type: git
