disabled nose for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 # command to run tests
 script:
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then nosetests -s; fi'
+#  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then nosetests -s; fi'
   - yamllint */
 
 notifications:
