Added pyrebase to rosdep/python.yaml (#16785)
* Added pyrebase to rosdep/python.yaml

* Added pip suffix to pyrebase key

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -134,6 +134,16 @@ pyqt5-dev-tools:
   fedora: [python-qt5-devel]
   gentoo: [dev-python/PyQt5]
   ubuntu: [pyqt5-dev-tools]
+pyrebase-pip:
+  debian:
+    pip:
+      packages: [pyrebase]
+  fedora:
+    pip:
+      packages: [pyrebase]
+  ubuntu:
+    pip:
+      packages: [pyrebase]
 pyro4:
   arch: [python2-pyro]
   debian: [python2-pyro4]
