add keys for catkin dependencies in melodic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -291,6 +291,10 @@ python-argparse:
     pip:
       packages: [argparse]
   ubuntu:
+    artful:
+      packages: []
+    bionic:
+      packages: []
     lucid: [python-argparse]
     maverick: [python-argparse]
     natty: [python-argparse]
@@ -497,6 +501,8 @@ python-catkin-pkg:
     pip:
       packages: [catkin-pkg]
   ubuntu:
+    artful: [python-catkin-pkg]
+    bionic: [python-catkin-pkg]
     lucid: [python-catkin-pkg]
     maverick: [python-catkin-pkg]
     natty: [python-catkin-pkg]
@@ -909,6 +915,8 @@ python-empy:
     pip:
       packages: [empy]
   ubuntu:
+    artful: [python-empy]
+    bionic: [python-empy]
     lucid: [python-empy]
     maverick: [python-empy]
     natty: [python-empy]
@@ -1672,6 +1680,8 @@ python-mock:
       packages: [mock]
   slackware: [mock]
   ubuntu:
+    artful: [python-mock]
+    bionic: [python-mock]
     lucid: [python-mock]
     maverick: [python-mock]
     natty: [python-mock]
@@ -1831,6 +1841,8 @@ python-nose:
       packages: [nose]
   slackware: [nose]
   ubuntu:
+    artful: [python-nose]
+    bionic: [python-nose]
     lucid: [python-nose]
     maverick: [python-nose]
     natty: [python-nose]
