catkin: 0.7.9-0 in 'melodic/distribution.yaml' [bloom] (#16808)
* catkin: None-0 in 'melodic/distribution.yaml' [bloom]

* fix version

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -11,5 +11,21 @@ release_platforms:
   - artful
   - bionic
 repositories:
+  catkin:
+    doc:
+      type: git
+      url: https://github.com/ros/catkin.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/catkin-release.git
+      version: 0.7.9-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/catkin.git
+      version: kinetic-devel
+    status: maintained
 type: distribution
 version: 2
