add artful and bionic rules for boost

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -275,6 +275,8 @@ boost:
     slackpkg:
       packages: [boost]
   ubuntu:
+    artful: [libboost-all-dev]
+    bionic: [libboost-all-dev]
     lucid: [libboost1.40-all-dev]
     maverick: [libboost1.42-all-dev]
     natty: [libboost1.42-all-dev]
